// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Avatar Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    
    <div
      class="StyledBox-sc-13pk1d4-0 fXtYff StyledAvatar-sc-1suyamb-1 sc-iWFSnp dyTeJE"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-user-circle fa-w-16 fa-2x "
        data-icon="user-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style="color: rgb(183, 190, 211); background: white;"
        viewBox="0 0 496 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Avatar Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dKvtcX StyledAvatar-sc-1suyamb-1 sc-iWFSnp dyTeJE"
    >
      <div
        class="sc-fKFyDc jHCVxA sc-bBXqnf dtyrhz"
      >
        JD
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Avatar With First Name 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fXtYff StyledAvatar-sc-1suyamb-1 sc-iWFSnp dyTeJE"
    >
      <div
        class="sc-fKFyDc jHCVxA sc-bBXqnf dtyrhz"
      >
        J
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Avatar With Full Name 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fXtYff StyledAvatar-sc-1suyamb-1 sc-iWFSnp dyTeJE"
    >
      <div
        class="sc-fKFyDc jHCVxA sc-bBXqnf dtyrhz"
      >
        JD
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Avatar With Image 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fiIZgk StyledAvatar-sc-1suyamb-1 sc-iWFSnp dyTeJE"
    />
    
  </div>
</div>
`;

exports[`Storyshots Core/Avatar With Last Name 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fXtYff StyledAvatar-sc-1suyamb-1 sc-iWFSnp dyTeJE"
    >
      <div
        class="sc-fKFyDc jHCVxA sc-bBXqnf dtyrhz"
      >
        D
      </div>
    </div>
  </div>
</div>
`;
